--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "ts-node src/server.ts",
     "start:dev": "nodemon --exec node src/server.ts",
     "build": "tsc",
+    "train": "train.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "MIT",
